# Hyper-Cognitive-Kernel

./: Cargo.toml  LICENSE  README.md
examples/: benchmark.rs
src/: lib.rs  main.rs
src/cognition/: attention.rs  mod.rs  predictive_coding.rs  world_model.rs
src/continual/: ewc.rs  memory_replay.rs  mod.rs  packnet.rs  progressive.rs  synaptic.rs
src/core/: agent.rs  config.rs  mod.rs
src/distributed/: gossip.rs  learner.rs  mod.rs  pubsub.rs
src/environment/: http_api.rs  message_bus.rs  mod.rs  mqtt_client.rs  websocket_client.rs
src/homeostasis/: allostasis.rs  drives.rs  mod.rs
src/memory/: episodic.rs  mod.rs  procedural.rs  semantic.rs
src/meta/: learning_controller.rs  mod.rs  self_reflection.rs
src/neural/: activations.rs  layers.rs  mod.rs  optimizer.rs
src/nlp/: mod.rs
src/real_time/: adaptive_lr.rs  mod.rs  online_trainer.rs
src/rl_integration/: mod.rs
src/utils/: logger.rs  math.rs  mod.rs
src/vision/: mod.rs
