[package]
name = "hyper_cognitive_kernel"
version = "1.0.0"
edition = "2021"
authors = ["~Ano"]
description = "Professional-Grade Hyper-Cognitive Agent Kernel - Advanced autonomous agent with real-time learning, deep neural networks, and distributed intelligence"
license = "MIT"
repository = "https://github.com/ano/hyper_cognitive_kernel"
keywords = ["ai", "cognitive", "neural", "autonomous", "learning", "active-inference", "predictive-coding", "deep-learning", "real-time"]
categories = ["science", "algorithms", "artificial-intelligence"]

[lib]
name = "hyper_cognitive_kernel"
path = "src/lib.rs"

[[bin]]
name = "hck_agent"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.bench]
inherits = "release"
debug = true

[dependencies]
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
rand = "0.8"
parking_lot = "0.12"
rayon = "1.8"
num_cpus = "1.16"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
